--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,7 +21,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pilt"/>
+        android:text="@string/pilt"
+        android:id="@+id/btnlisa"/>
 
     <EditText
         android:id="@+id/eesNimi"
