--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -13,6 +13,12 @@
     android:orientation="vertical"
     tools:context="com.example.opilane.login.UserProfileActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:id="@+id/profile_pic"
+        android:scaleType="centerInside"/>
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
